--- a/index.html
+++ b/index.html
@@ -10,17 +10,33 @@
     <link rel="stylesheet" href="styles.css" />
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
 </head>
 
 <body>
     <video id="background-video" autoplay loop muted>
         <source src="./videos/video.mp4" type="video/mp4" />
     </video>
-    <div id="navbar">
-        <a> <img  src="images/0.png" class = "refresh" href= "#" alt="Lakelife logo"> </a>
-        <a class="right" href="#about">ABOUT</a>
-        <a class="right" href="#services">SERVICES</a>
-    </div>
+    <div class="topnav" id="myTopnav">
+        <a href="#header">Home</a>
+        <a href="#services">Services</a>
+        <a href="#about">About</a>
+        <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+          <i class="fa fa-bars"></i>
+        </a>
+      </div>
+
+      <script>
+        function myFunction() {
+  var x = document.getElementById("myTopnav");
+  if (x.className === "topnav") {
+    x.className += " responsive";
+  } else {
+    x.className = "topnav";
+  }
+}
+      </script>
   
 
     <div id="header">
@@ -161,14 +177,14 @@ Home
 
 
     <script>
-// function pop ups navbar when scrolling down
+// function pop ups navbar when scrolling up
 var prevScrollpos = window.pageYOffset;
 window.onscroll = function() {
   var currentScrollPos = window.pageYOffset;
   if (prevScrollpos > currentScrollPos) {
-    document.getElementById("navbar").style.top = "0";
+    document.getElementById("myTopnav").style.top = "0";
   } else {
-    document.getElementById("navbar").style.top = "-80px";
+    document.getElementById("myTopnav").style.top = "-80px";
   }
   prevScrollpos = currentScrollPos;
 }
