--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
       <script>
         function myFunction() {
-  var x = document.getElementById("myTopnav");
+  const x = document.getElementById("myTopnav");
   if (x.className === "topnav") {
     x.className += " responsive";
   } else {
